--- a/index.html
+++ b/index.html
@@ -6,7 +6,43 @@
   <meta name="description" content="AIS | Icyitegetse Aimable | Futuristic UX/UI Designer & Full Stack Developer Portfolio">
   <meta name="theme-color" content="#0f172a">
   <link rel="manifest" href="/manifest.json">
-  <title>AIS | Icyitegetse Aimable | Portfolio 2050</title>
+  <!-- Basic SEO -->
+<title>AIS – Full Stack Developer & UI/UX Portfolio by Icyitegetse Aimable</title>
+<meta name="description" content="AIS is the professional portfolio of Icyitegetse Aimable – a Full Stack Developer, UI/UX designer, and graphic artist. Explore apps, designs, and case studies.">
+<meta name="keywords" content="Icyitegetse Aimable, full stack developer, UI/UX designer, graphic designer, web developer, portfolio, AIS, open source, GitHub">
+
+<!-- Open Graph (Facebook, LinkedIn, etc.) -->
+<meta property="og:title" content="AIS – Portfolio of Icyitegetse Aimable">
+<meta property="og:description" content="Explore the work of Icyitegetse Aimable – a full-stack developer and UI/UX designer specializing in web development, product design, and branding.">
+<meta property="og:url" content="https://icyitegetseaimable.github.io/AIS/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://icyitegetseaimable.github.io/AIS/assets/preview.png" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="AIS – Portfolio of Icyitegetse Aimable">
+<meta name="twitter:description" content="Explore full-stack development and UI/UX design work by Icyitegetse Aimable.">
+<meta name="twitter:image" content="https://icyitegetseaimable.github.io/AIS/assets/preview.png">
+
+<!-- Canonical Link (helps Google identify your preferred URL) -->
+<link rel="canonical" href="https://icyitegetseaimable.github.io/AIS/" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Icyitegetse Aimable",
+  "url": "https://icyitegetseaimable.github.io/AIS/",
+  "jobTitle": "Full Stack Developer, UI/UX Designer, Graphic Designer",
+  "sameAs": [
+    "https://github.com/icyitegetseaimable"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Freelance / Open Source"
+  },
+  "description": "Professional portfolio of Icyitegetse Aimable, showcasing full-stack web development, UI/UX projects, and graphic design work."
+}
+</script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -414,4 +450,5 @@
     // deferredPrompt.prompt();
   </script>
 </body>
+
 </html>
